--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "style-loader": "^1.2.1",
     "v-click-outside": "^3.1.1",
     "vue": "^2.6.11",
+    "vue-flickity": "^1.2.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
