--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "v-click-outside": "^3.1.1",
     "vue": "^2.6.11",
     "vue-flickity": "^1.2.1",
+    "vue-range-component": "^1.0.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
